# CV-SUMMER-CAMP

./: .gitignore  CMakeLists.txt  README.md  classificator.h  detector.cpp  detector.h  filter.cpp  filter.h  practice1_Alexey_Makarevich.cpp  practice3_KristinaO.cpp
data/: b.jfif  comand.txt  head-pose-estimation-adas-0001.xml  output.avi  squeezenet1.1.labels
docs/: README_1.md  README_2.md  README_3.md  README_4.md  README_5.md  lunch.md
include/: classificator-Nikita-Khloptsev.h  classificator.h  detectedobject-Nikita-Khloptsev.h  detectedobject.h  detector-Nikita-Khloptsev.h  detector.h  filter.h  filter_SedovaSasha.h  label_parser.h  tracker.h  tracking_by_matching.hpp  videostream.h
samples/: CMakeLists.txt  practice1-Nikita-Khloptsev.cpp  practice1.cpp  practice1_ANTON_LAPSHIN.cpp  practice1_ANTON_LAPSHIN_additional.cpp  practice1_Alexey_Makarevich.cpp  practice1_Anton.cpp  practice1_Damir_Valiullin.cpp  practice1_Evgeniy_Kirillov.cpp  practice1_GRIGORY_KAPUSTIN.cpp  practice1_GolubevDmitriy.cpp  practice1_IVAN_VIKHREV.cpp  practice1_Jerry.cpp  practice1_Lobov_Ivan.cpp  practice1_Novikov_Ready.cpp  practice1_OSTROVSKY_ILYA.cpp  practice1_Oparin_Sergey.cpp  practice1_PEROV_DIMA.cpp  practice1_PERTOVSKIY_ALEKSANDR.cpp  practice1_Razumova_Maria.cpp  practice1_Sedova.cpp  practice1_SedovaSasha.cpp  practice1_SedovaSasha1.cpp  practice1_Shashkin_Evgeny.cpp  practice1_TroynyakovVladimir.cpp  practice1_Vitaly.cpp  practice1_YANA.cpp  practice1_Yura.cpp  practice1_egorov_danil.cpp  practice1_perevezentsev.cpp  practice1_sergei_solovev.cpp  practice2 _YANA.cpp  practice2-Nikita-Khloptsev.cpp  practice2-Vitaly.cpp  (+72 more)
src/: CMakeLists.txt  classificator-Nikita-Khloptsev.cpp  classificator.cpp  classificator.h  classificator_Sedova.cpp  classificator_Sedova1.cpp  classificator_SedovaS.cpp  classificator_Yura.cpp  detectedobject.h  detector-Nikita-Khloptsev.cpp  detector.cpp  detector.h  detector_Yura.cpp  filter-Nikita-Khloptsev.cpp  filter.cpp  filter.h  filter_Razumova_Maria.cpp  filter_Sedova.cpp  filter_SedovaSasha.cpp  filter_SedovaSasha1.cpp  filter_Yura.cpp  kuhn_munkres.cpp  kuhn_munkres.hpp  label_parser.cpp  practice1.cpp  practice2.cpp  practice3.cpp  solve_practice1.cpp  solve_practice2.cpp  solve_practice3.cpp  solve_practice4.cpp  solve_practice5.cpp  tracker.cpp  tracker.h  tracking_by_matching.cpp  tracking_by_matching_Yura.cpp  videostream.cpp
(+3 files in other folders)
